# Crazy-ZZB

./: README.md
人工智能算法与系统/HW1/: README.md  main.ipynb
人工智能算法与系统/HW1/result/: imputer.pkl  scaler.pkl
人工智能算法与系统/HW2/: .gitignore  README.md  Report.md  TrainLog.txt  main.ipynb
人工智能算法与系统/HW3/: .gitignore  README.md  Report.md  main.py
人工智能算法与系统/HW3/torch_py/: QNetwork.py
人工智能算法与系统/Projects/HW_1/: AdultMortality.ipynb  README.md  Report.md  trainer.py
人工智能算法与系统/Projects/HW_1/data/: wow.csv
人工智能算法与系统/Projects/HW_1/result/: model.pkl
人工智能算法与系统/Projects/HW_2/: .gitignore  README.md  app.py  main.ipynb  model.py
人工智能算法与系统/Projects/HW_3/: .gitignore  Maze.py  README.md  Runner.py  main.ipynb  main.py
人工智能算法与系统/Projects/HW_3/torch_py/: QNetwork.py
其他/: PromptEngineering.ipynb  ZJUCTF2024.md
其他/RCA_DA/Notes/: ResearchMethods.docx
数据挖掘/HW/: ANS1.md  ANS2.md
数据挖掘/Notes/: Course_1.md
科学计算可视化及应用开发/: .gitignore  CMakeLists.txt  README.md  sample.cpp
科学计算可视化及应用开发/EEG/: .gitignore  README.md  app.py  byVTK.py
科学计算可视化及应用开发/EEG/utils/: Channel.py  DataLoader.py  MSquare.py  byVTK.py  vis.py
科学计算可视化及应用开发/src/: dcmReader.cpp  dcmReader.h
